--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,28 @@
+<div class="container">
+
+<div class="row text-center">
+     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:140px'></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
+
+<div class="row">
+<div class="col-sm-4">
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- school9edu_main_Blog1_1x1_as -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="9074553645"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>   
+
+</div>
+<div class="col-sm-4">
+<div class="ibox-content text-center">
+
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -16,10 +41,38 @@
     <%= f.label :password_confirmation, "Confirm new password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- school9edu_main_Blog1_1x1_as -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7665698555914778"
+     data-ad-slot="9074553645"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", :class => "btn btn-primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "Log in", new_session_path(resource_name), :class => "btn btn-success" %>
+<%= link_to "Sign up", new_registration_path(resource_name), :class => "btn btn-success" %><br />
+</div>
+</div>
+<div class="col-sm-4">
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- school9edu_main_Blog1_1x1_as -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="9074553645"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>   
+</div>
+</div>
+<!-- <%= recaptcha_tags %> -->
+ 
+</div>
