--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -81,7 +81,7 @@
           <div class="panel-body">
           	<div clsaa="row">
           		<div class="col-md-6">MECHANICAL Test Exams</div>
-          		<div class="col-md-6 text-center"><a href="/ecet/mechanical"><button class="btn btn-info" > Cooming Soon </button></a></div>
+          		<div class="col-md-6 text-center"><a href="/ecet/mechanical"><button class="btn btn-info" > Exam List </button></a></div>
           </div>
           </div>
         </div>
