--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
 
 <div id="footer" style="text-align: center">
           <div class="pull-right">
-           POWERED BY <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">
+           DESIGNED BY <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">
             <strong><span style="color: green">Sm</span><span style="color:red"> Khalidh</span></strong></a>
             <!-- <strong>Copyright</strong> -->
 
@@ -26,6 +26,7 @@
             <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:25px"></i></a>
             <!-- &copy;<%= Time.now.year %> -->
           </div>
+         <div class="pull-left"> POWERED BY <a href="http://www.sbtetworld.in" target="_blank"><b>SBTET WORLD</b></div>
           <div style="text-align: center">
           <a href="https://www.linkedin.com/in/sbtetworld-fast-results-79305a141/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
