--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,7 +45,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, :placeholder => "sbtetworld@gmail.com", required: true %>
+    <%= f.email_field :email, required: true %>
   </div>
 
   <div class="field">
@@ -72,7 +72,6 @@
   </div>
    
 <br>
-<!-- <%= recaptcha_tags %> -->
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- school9edu_main_Blog1_1x1_as -->
 <ins class="adsbygoogle"
