--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
             </script>
     </div>
 
-    <div class="row"> 
+  
 
     <h1 class="text-center">WELCOME TO SBTET ONLINE PORTAL </h1>
 
@@ -23,60 +23,60 @@
 
 
  
-<div>
-<b class="text-success">
-<!-- <p>Hi Every One,</p>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The students who are eagerly waiting for <a href="http://www.sbtetworld.in">SBTET WORLD.IN </a> mock Practice based Test of AP & TS ECET 2017 (Engineering Stream Test for Diploma Holders). Sbtet World is going to conduct Andhra Pradesh and Telangana State Ecet Practice Tests are commencing from <span class="text-danger">15-04-2017</span>. So, here we are informing to all the students/Candidates get ready for Online based mock Test. Thanking you all from @ <a class="text-danger" href="http://www.sbtetworld.in"> http://www.sbtetworld.in</a> -->
-    Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P.
-</b>
-<br><br>
-<b class="text-danger">
-    Telangana State Engineering Common Entrance Test TSECET- 2017 will be conducted through computer based Test by JNTUH, Hyderabad on behalf of Telangana State Council of Higher Education (TSCHE). TSECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in T.S.
-    </b>
-<br>
-<br>
-<br>
 <div class="text-center">
- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <br>
+        <b class="text-success">
+        <!-- <p>Hi Every One,</p>
 
-<a href="/ecetsubjects"><button class="btn btn-success">Start Ecet Exam</button></a>
-<br><br>
- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-7665698555914778"
-                 data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The students who are eagerly waiting for <a href="http://www.sbtetworld.in">SBTET WORLD.IN </a> mock Practice based Test of AP & TS ECET 2017 (Engineering Stream Test for Diploma Holders). Sbtet World is going to conduct Andhra Pradesh and Telangana State Ecet Practice Tests are commencing from <span class="text-danger">15-04-2017</span>. So, here we are informing to all the students/Candidates get ready for Online based mock Test. Thanking you all from @ <a class="text-danger" href="http://www.sbtetworld.in"> http://www.sbtetworld.in</a> -->
+            Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P.
+        </b>
+        <br><br>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+        <br>
+        <b class="text-danger">
+            Telangana State Engineering Common Entrance Test TSECET- 2017 will be conducted through computer based Test by JNTUH, Hyderabad on behalf of Telangana State Council of Higher Education (TSCHE). TSECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in T.S.
+            </b>
+        <br>
+        <br>
+        <br>
+        <div class="text-center">
 
+
+        <a href="/ecetsubjects"><button class="btn btn-success">Start Ecet Exam</button></a>
+         <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+
+        </div>
+        <br><br>
+        <p class="text-info">SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).<br><br>
+
+        <b>Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</b></p>
+
+        <p class="text-danger"><b> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose. <br>Do hard work, Practice and get Success.</b></p>
+        <br>
+        <h3 class="text-success text-center">*********SBTET WORLD WISHING YOU ALL THE BEST********</h3>
+        </div>
+        <br>
 </div>
-<br><br>
-<p class="text-info">SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.........) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).<br><br>
-
-Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</p>
-
-<p class="text-danger"><b> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…….Do hard work, Practice and get Success.</b></p>
-<br><br>
-<h4 class="text-success text-center">*********SBTET WORLD WISHING YOU ALL THE BEST********</h4>
-</div>
-<br>
 <div class="row text-center">
 
 
-    </div>
+</div>
 
 </div>
