--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -85,6 +85,14 @@
           </div>
           </div>
         </div>
+                  <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
     
 
          <div class="panel panel-info">
