--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -59,9 +59,9 @@
 
           <!-- START ADD HERE -->
           <!-- fit -->
-         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+         <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:100px'></ins>
-          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script> -->
           <!-- END ADD HERE -->
 
 
