--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" href="/images/sbtet.png" type="image/png"> 
+   <link rel="icon" href="sbtetworld.png" type="image/png"> 
    
 
         <style>  
