--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -61,10 +61,14 @@
 				<tr class="text-center">
 					<td colspan="3">
 	 				
-	 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:70px'></ins>
-	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
+	 				 <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
 	                </td> 
 	             </tr>
                 <% end %>
