--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -64,7 +64,7 @@
     <div class="panel panel-default">
           <div class="panel-body">
           <div class="row">     
-          <div class="col-sm-3">
+          <div class="col-sm-5">
            <%= simple_form_for @submitque, :input_html => {:id => "form_id", :class => "form-horizontal"}, url: {action: "submitque", method: "post"} do |f| %> 
               <%= f.error_notification %>
 
@@ -85,10 +85,21 @@
                   <%= f.input :answer, as: :radio_buttons, :required => true, :label => false, collection: ([[q.a.html_safe,'a'] , [q.b.html_safe,'b'], [q.c.html_safe,'c'], [q.d.html_safe, 'd']]), wrapper: :vertical_radio_and_checkboxes %>
               <% end %>
 
+
                 <% disabled = Submitque.where(:userid => current_user, :question => q.id, :subject => @subject) %>
                    <% if disabled.empty? %>
+
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px; margin-left: -60px;'></ins>
+               <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
                       <%= f.submit "submit", :class => "btn btn-primary"%>
                   <% else %>
+
+                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px; margin-left: -40px;'></ins>
+               <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
                       <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
                    <% end %>
 
@@ -96,7 +107,7 @@
            
            </div>
             <% end %>
-           <div class="col-sm-5 text-center">
+           <div class="col-sm-3 text-center">
            <% if @ad == "yes"%>
                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- school9edu_main_Blog1_1x1_as -->
