--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -90,14 +90,14 @@
                    <% if disabled.empty? %>
 
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px; margin-left: -60px;'></ins>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px;'></ins>
                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
                       <%= f.submit "submit", :class => "btn btn-primary"%>
                   <% else %>
 
                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px; margin-left: -40px;'></ins>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px;'></ins>
                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
                       <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
