--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 
   
 
-    <h1 class="text-center">WELCOME TO SBTET ONLINE PORTAL </h1>
+    <h1 class="text-center">WELCOME TO NEETGOV ONLINE PORTAL </h1>
 
 
         <marquee><h2 class="text-danger"><b>Available Now</b></h2></marquee>
