--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -40,25 +40,16 @@
 </div>
   <div class="panel panel-default">
     <div class="panel-body"><p><%= @questions.current_page %>) <%= q.question.html_safe %></p><br>
+    
     <% if q.qimage? %>
     <div class="row">
     <div class="col-sm-8">
       <p class="text-center"><span class="img-thumbnail"><%= image_tag(q.qimage, :class => 'img-thumbnail') %></span></p>
       </div>
-      <div class="col-sm-4">
-       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- school9edu_main_Blog1_1x1_as -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-7665698555914778"
-           data-ad-slot="9074553645"
-           data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-
-    <% end %>
+      <div class="col-sm-4"></div>
     </div>
+    <% end %>
+   </div> 
   </div>
                 
     <div class="panel panel-default">
@@ -90,14 +81,14 @@
                    <% if disabled.empty? %>
 
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px;'></ins>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:200px;max-width:1100px;width:100%;height:50px;'></ins>
                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
                       <%= f.submit "submit", :class => "btn btn-primary"%>
                   <% else %>
 
                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:50px;'></ins>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:200px;max-width:1100px;width:100%;height:50px;'></ins>
                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
                       <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
@@ -109,16 +100,16 @@
             <% end %>
            <div class="col-sm-3 text-center">
            <% if @ad == "yes"%>
-                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- school9edu_main_Blog1_1x1_as -->
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-7665698555914778"
-                     data-ad-slot="9074553645"
-                     data-ad-format="auto"></ins>
-                <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>  
+                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- Responsive Links -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="8409268847"
+                         data-ad-format="link"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
            <% else %>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- Responsive Links -->
