--- a/app/views/ajs/index.html.erb
+++ b/app/views/ajs/index.html.erb
@@ -1,16 +1,15 @@
+<div class="container">
 
+<b>
+<div class="text-danger">Disclaimer: </div>
+<div >
+<p>Information provided free of cost by www.neetgov.in is collected from various sources such as text book, Study Material and any other sources or any one of them, offered by organizations, periodicals, websites, portals or their representatives. Users must seek authentic clarification from the respective official sources for confirmation. www.neetgov.in will not be responsible for errors in the information provided, or inconvenience to the readers thereon.</p>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="app.js"></script>
-  <div ng-app="" ng-init="test='*******************'">
-    <div>
-      {{test}}
+<p>This Website Is” NOT OFFICIAL” By ANY State Board or University. Here We Provide Mainly About All India entrance Exam Test Mock Practices and competitive bits. This Particular Entrance Exam Bits Are gathering from referring Some Books and internet, we are also providing All India Education Information/Updates/Results/Notifications Official Website of various State Board and University in India. This Info is not official and FINAL. For Helping Students We Are Providing Accurately. For Official and Confirming Any Updates/Results. Contact at Your College management/Board Of Education and Other than this Website We Are Not Responsible for any wrong information.</p>
 
-      <div class="container">
-<% @questions.each do |q| %>
-	<%= q.question %><br>
-<% end %>
-
+<p>IF You Have Any Queries/Complaints. Please Feel Free To Mail us at Any Time : riseyuvaservices@gmail.com
+It would be ideal if you permit us a week or two for an email response. Take note of that messaging your protestation to different gatherings, for example, our Internet Service Provider won't speed up your demand and may bring about a postponed response due the complaint not properly being filed.</p>
+Thank You for Supporting, @Team neetgov.in.
 </div>
-    </div>
-  
+</b>                                                                
+</div>
