--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -56,8 +56,8 @@
           </div>
           </div>
         </div>
-
-        <ins class="adsbygoogle"
+              <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-7665698555914778"
                      data-ad-slot="8409268847"
