--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -60,7 +60,7 @@
 				
 				<tr class="text-center">
 					<td colspan="3">
-	 				
+	 				<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	 				 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-7665698555914778"
