--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 
   
 
-    <h1 class="text-center">WELCOME TO NEETGOV ONLINE PORTAL </h1>
+    <h1 class="text-center">WELCOME TO NEETGOV ONLINE EXAM PORTAL </h1>
 
 
         <marquee><h2 class="text-danger"><b>Available Now</b></h2></marquee>
@@ -32,6 +32,7 @@
             Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P.
         </b>
         <br><br>
+        <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-7665698555914778"
