--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE >
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>SBTET WORLD ONLINE EXAMINATION PORTAL</title>
+  <title>NEET GOV ONLINE EXAMINATION PORTAL</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag 'application' %>
+
+  <meta name="keywords" content="NEET, neet,NEET GOV ONLINE EXAMINATION PORTAL, SBTET WORLD ONLINE EXAMINATION PORTAL, ap ecet online test practice, ts ecet online test practice, ecet, online test, neetgov, neetgov.in, Ap ecet online exam test, Ts online exam test, Ecet online test exam test practice, NEET <%= Time.current.year  %>, sbtetworld.in, sbtetworld, sbtet,">
+<meta name="description" content="Neetgov.in is online ecet exam test">
 
   <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
 
