--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -146,16 +146,17 @@
 				<% ad+=ad2 %>
 				<tr class="text-center">
 				<td colspan="7">
-					 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				        <!-- school9edumain_Blog1_1x1_as -->
-				        <ins class="adsbygoogle"
-				             style="display:block"
-				             data-ad-client="ca-pub-7665698555914778"
-				             data-ad-slot="9074553645"
-				             data-ad-format="auto"></ins>
-				        <script>
-				        (adsbygoogle = window.adsbygoogle || []).push({});
-				        </script>
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- Responsive Links -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="8409268847"
+                         data-ad-format="link"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+           <% else %>
 
                    </td> 
                    
