--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
 <div class="container">
+<% if notice %>
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= notice %>
+        </div>
+        <% end %>
+        <% if alert %>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <%= alert %>
+        </div>
+<% end %>
 
   <div class="row text-center">
               <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -11,7 +23,7 @@
             <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-    </div>
+    </div> 
 
   
 
@@ -65,7 +77,7 @@
 
         </div>
         <br><br>
-        <p class="text-info">SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).<br><br>
+        <p class="text-success"><b>SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).</b><br><br>
 
         <b>Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</b></p>
 
