--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,7 @@
     padding-top:7px;
 }
 </style>
+ <%= javascript_include_tag 'application' %>
 
 <div id="footer" style="text-align: center">
           <div class="pull-right">
