--- a/app/views/ajs/index.html.erb
+++ b/app/views/ajs/index.html.erb
@@ -1,15 +1,21 @@
 <div class="container">
 
-<b>
-<div class="text-danger">Disclaimer: </div>
-<div >
-<p>Information provided free of cost by www.neetgov.in is collected from various sources such as text book, Study Material and any other sources or any one of them, offered by organizations, periodicals, websites, portals or their representatives. Users must seek authentic clarification from the respective official sources for confirmation. www.neetgov.in will not be responsible for errors in the information provided, or inconvenience to the readers thereon.</p>
+	<div class=" text-center">
+	     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	    <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:250px;max-width:1100px;width:100%;height:120px'></ins>
+	      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	</div>
 
-<p>This Website Is” NOT OFFICIAL” By ANY State Board or University. Here We Provide Mainly About All India entrance Exam Test Mock Practices and competitive bits. This Particular Entrance Exam Bits Are gathering from referring Some Books and internet, we are also providing All India Education Information/Updates/Results/Notifications Official Website of various State Board and University in India. This Info is not official and FINAL. For Helping Students We Are Providing Accurately. For Official and Confirming Any Updates/Results. Contact at Your College management/Board Of Education and Other than this Website We Are Not Responsible for any wrong information.</p>
 
-<p>IF You Have Any Queries/Complaints. Please Feel Free To Mail us at Any Time : riseyuvaservices@gmail.com
-It would be ideal if you permit us a week or two for an email response. Take note of that messaging your protestation to different gatherings, for example, our Internet Service Provider won't speed up your demand and may bring about a postponed response due the complaint not properly being filed.</p>
-Thank You for Supporting, @Team neetgov.in.
+<h1 class="text-center">WELCOME TO NEET GOV ONLINE EXAM PORTAL </h1><br>
+<div class="text-success" ><b>
+<p>Get All ANUCET, APGENCO & APTRANSCO, APRJC,  APSET APTET AUCET, CEEP, Civil, CSSET & CSAET DIETCET, DSC, EAMCET, ECET, EDCET, IBSAT, ICET, lAWCET, lPCET ,NEET ,PECET ,PGCET, PGECET ,POLYCET ,TSSET UPSC ,AIEEE, AIIMS, BITSA,T CA ,IPCC, CA-CPT, CAT, CHSL, CIVILS I, GATE, IIT-JEE, NEET, SSB Much more Online Exam Test.</p>
+
+<p> Neet Gov also Providing All india Educations Updates like Notifications, Time tables, Results, Syllabus books, Etc. This Info for Helping Students We Are Providing Accurately for Official Conformation contact college section and higher authorities.</p>
+ </b>
 </div>
-</b>                                                                
-</div>
+
+<div class="text-center">
+	<a href="/login"><button class="btn btn-success">Login</button></a>
+	<a href="users/sign_up"><button class="btn btn-success">Signup</button></a>
+</div>                                                             
