--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -19,7 +19,7 @@
  </div>
 <div class="row text-center">
            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:140px'></ins>
+                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:140px'></ins>
                 
                 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
@@ -28,20 +28,20 @@
 <% i = 1 %>
 
 <div class="row">
-<div class="col-sm-1 text-center"></div>
-	<div class="col-md-10">
+<div class="col-sm-2 text-center"></div>
+	<div class="col-md-8">
 
 <% if @comptest.empty? %>
 	<div class="alert alert-danger">
-      <strong>No Tests Added Yet</strong>
+      <strong>Sorry, No tests added yet &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/ecetsubjects">Click here</a> &nbsp;&nbsp;to go back</strong>
     </div>
 		
 <% else %>
 		<table class="table table-bordered">
 			<tr>
-				<th class="success">Test</th>
-				<th class="success">Date</th>
-				<th class="success"></th>
+				<th class="text-success success">Test</th>
+				<th class="text-success success">Date</th>
+				<th class="text-success success"></th>
 			</tr>
 			
 			<% ad=@comptest.count/2 %>
@@ -51,9 +51,13 @@
 
 		<% @comptest.each do |c| %>
 			<tr>
-				<td>Exam-<%= i %></td>
+				<td><%= c.subject %>Mock Test -<%= i %></td>
 				<td><%= c.created_at %></td>
-				<td><a href="/exam/<%= c.tc %>/<%= @subject %>" >Start Exam </a></td>
+				<td>
+					<a href="/exam/<%= c.tc %>/<%= @subject %>" ><button class="btn btn-success">Start Mock Test</button></a>
+					<% if @testcount.empty %>
+					<% end %>
+				</td>
 			
 			</tr>
 			<% if i == ad %>
@@ -80,12 +84,12 @@
 
 </div>
 
-<div class="col-sm-1 text-center"></div>
+<div class="col-sm-2 text-center"></div>
 
 </div>
 		<div class="row text-center">
 					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:100px'></ins>
+	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:100px'></ins>
 	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 	    </div>
 
