--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -56,7 +56,25 @@
           </div>
           </div>
         </div>
-             
+              <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+
+          <!-- START ADD HERE -->
+          <!-- fit -->
+         <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:100px'></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script> -->
+          <!-- END ADD HERE -->
+
+
+
         <div class="panel panel-info">
           <!-- <div class="panel-heading"><a href="/ecet/eee">Electrical & Electronics</a><br></div> -->
           <div class="panel-body">
@@ -77,15 +95,7 @@
           </div>
         </div>
                   
-     <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-7665698555914778"
-                     data-ad-slot="8409268847"
-                     data-ad-format="link"></ins>
-                <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+    
 
          <div class="panel panel-info">
           <!-- <div class="panel-heading"><a href="/ecet/civil">CIVIL</a><br></div> -->
