--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -1,5 +1,5 @@
  <div class="container">
-          <% if notice %>
+         <!--  <% if notice %>
                   <div class="alert alert-success alert-dismissible" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                       <%= notice %>
@@ -10,7 +10,7 @@
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <%= alert %>
                   </div>
-                  <% end %>
+                  <% end %> -->
        <div class="row text-center">
         
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -86,12 +86,10 @@
 
                       <%= f.submit "submit", :class => "btn btn-primary"%>
                   <% else %>
-
-                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                   <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:200px;max-width:1100px;width:100%;height:50px;'></ins>
                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
-                      <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
+                <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
                    <% end %>
 
               
