--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -53,7 +53,7 @@
 			<tr>
 				<td><%= c.subject %> Mock test - <%= i %></td>
 				<td><%= c.created_at.strftime('%d-%m-%Y %T') %></td>
-				<td><a href="/exam/<%= c.tc %>/<%= @subject %>" ><button class="btn btn-success">Start Exam </button></a></td>
+				<td><a href="/exam/<%= c.tc %>/<%= @subject %>" >Start Exam </a></td>
 			
 			</tr>
 			<% if i == ad %>
