--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <meta name="keywords" content="NEET, neet,NEET GOV ONLINE EXAMINATION PORTAL, SBTET WORLD ONLINE EXAMINATION PORTAL, ap ecet online test practice, ts ecet online test practice, ecet, online test, neetgov, neetgov.in, Ap ecet online exam test, Ts online exam test, Ecet online test exam test practice, NEET <%= Time.current.year  %>, sbtetworld.in, sbtetworld, sbtet,">
+  <meta name="keywords" content="NEET, neet,NEET GOV ONLINE EXAMINATION PORTAL, SBTET WORLD ONLINE EXAMINATION PORTAL, ap ecet online test practice, ts ecet online test practice, ecet, online test, neetgov, neetgov.in, Ap ecet online exam test, Ts online exam test, Ecet online test exam test practice, NEET <%= Time.current.year  %>, sbtetworld.in, sbtetworld, sbtet, Get All ANUCET, APGENCO & APTRANSCO, APRJC, APSET APTET AUCET, CEEP, Civil, CSSET & CSAET DIETCET, DSC, EAMCET, ECET, EDCET, IBSAT, ICET, lAWCET, lPCET ,NEET ,PECET ,PGCET, PGECET ,POLYCET ,TSSET UPSC ,AIEEE, AIIMS, BITSA,T CA ,IPCC, CA-CPT, CAT, CHSL, CIVILS I, GATE, IIT-JEE, NEET, SSB Much more Online Exam Test, Notifications, Time tables, Results, Syllabus books">
 <meta name="description" content="Neetgov.in is online ecet exam test">
 
   <meta name="google-site-verification" content="Hkjj2HdvwtIjG9-vQXd3hQMfGgJ7STiY9OCTwIbg2uc" />
