signup mail description

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,6 +45,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
+     <em>(we will send confirmation link to this mail)</em>
     <%= f.email_field :email, required: true %>
   </div>
 
