--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -102,9 +102,19 @@
 </style>
 <br><br><br>
 <article>
-    <h1>We&rsquo;ll be back less than 15 minutes!</h1>
+    <h1>We&rsquo;ll be back less than 20 minutes!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:riseyuvaservices@gmail.com">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
         <p>&mdash; The Team</p>
+        <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	 				 <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+
     </div>
 </article>
