--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -112,13 +112,13 @@
       
     </div>
 
-    <div class="row text-center">
+   <!--  <div class="row text-center">
            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                   <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:120px'/>
                 
                 <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
-
+ -->
 
 
 </div>
