--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -5,7 +5,7 @@
    top: 0;
 }
 </style> -->
-<!-- <div class="container">
+<div class="container">
 
 <div class="row">
       <div class="col-sm-12">
@@ -78,35 +78,12 @@
 		</table>
 <% end %>
 
-</div> -->
-<!-- 
+</div>
+
 <div class="col-sm-1 text-center"></div>
-
-</div>
-		<div class="row text-center">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:100px'></ins>
-	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-	    </div>
-
-</div>
- -->
-
-<style>
-  /*body { text-align: center; padding: 150px; }*/
-  /*h1 { font-size: 50px; }*/
-  /*body { font: 20px Helvetica, sans-serif; color: #333; }*/
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
-<br><br><br>
-<article>
-    <h1>We&rsquo;ll be back less than 20 minutes!</h1>
-    <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:riseyuvaservices@gmail.com">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
-        <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<tr class="text-center">
+					<td colspan="3">
+	 				<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	 				 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-7665698555914778"
@@ -115,6 +92,11 @@
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
+</div>
+		<!-- <div class="row text-center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:400px;max-width:1100px;width:100%;height:100px'></ins>
+	                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	    </div> -->
 
-    </div>
-</article>
+</div>
