--- a/app/views/ecet/ecetform.html.erb
+++ b/app/views/ecet/ecetform.html.erb
@@ -66,7 +66,10 @@
                       <%= f.input :d, :required => true, :placeholder => "option D", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
                       </div>
                         <div class="col-sm-4">
-                      <%= f.input :t, :placeholder => "True Answer", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                    
+                      <%= f.input :t, :required => true, :collection => ['a','b','c','d'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
+
+
                        <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
                        </div>
                     </div>
