--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -7,7 +7,7 @@
 <% i = 1 %>
 <% j = 0 %>
 <% k = 1%>
-<div class="container-fluid"><br>
+<div class="container"><br>
 			<div class="row text-center">
 					  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 				        <!-- school9edumain_Blog1_1x1_as -->
@@ -20,7 +20,7 @@
 				        (adsbygoogle = window.adsbygoogle || []).push({});
 				        </script>
 
-			 </div>
+
 	<table class="table table-bordered">
 		<tr class="text-center">
 			<th class="col-sm-4">Question</th>
@@ -28,8 +28,8 @@
 			<th>Option B</th>
 			<th>Option C</th>
 			<th>Option D</th>
-			<th>Your Answer</th>
-			<th>True Answer</th>
+			<th class="col-sm-1">Your Answer</th>
+			<th class="col-sm-1">True Answer</th>
 
 
 		</tr>
@@ -62,14 +62,14 @@
 
 
 				<% if r.answer == @question.t %>
-					<% color = "lightgreen" %>
+					<% color = "green" %>
 					<% j+= 1 %>
 				<% else %>
 					<% color ="#f27171" %>
 				<% end %>
 				
 				<tr>
-					<td ><%= k %>) <%= @question.question %><br>
+					<td > <%= @question.question %><br>
 					<% if @question.qimage? %>
 						<%= image_tag(@question.qimage,:class => 'img-responsive') %>
 					<% end %>
@@ -88,7 +88,7 @@
 						<%if @question.comman == "yes" %>
 							<%= image_tag(@question.optionb,:class => 'img-responsive') %>
 						<% else %>
-							<%= @question.a %>
+							<%= @question.b %>
 						<% end %>
 					</td>
 					
@@ -108,37 +108,12 @@
 						<% end %>
 					</td>
 					
-					<td style="background-color:<%= color%>">
-						<% if @question.comman =="yes" %>
-								<%if r.answer == "a"%>
-									<%= image_tag(@question.optiona,:class => 'img-responsive') %>
-								<%elsif r.answer == "b"%>
-									<%= image_tag(@question.optionb,:class => 'img-responsive') %>
-								<%elsif r.answer == "c"%>
-									<%= image_tag(@question.optionc,:class => 'img-responsive') %>
-								<%elsif r.answer == "d"%>
-									<%= image_tag(@question.optiond,:class => 'img-responsive') %>
-								<% end %>
-						
-						<% else %>
-							<%= an %>
-						<% end %>
-
+					<td >
+							<h3 style="color:<%= color%>"><b><%= r.answer %></b></h3>
 					</td>
-					<td>
-						<% if @question.comman =="yes" %>
-							<%if @question.t == "a"%>
-									<%= image_tag(@question.optiona,:class => 'img-thumbnail') %>
-								<%elsif @question.t == "b"%>
-									<%= image_tag(@question.optionb,:class => 'img-thumbnail') %>
-								<%elsif @question.t == "c"%>
-									<%= image_tag(@question.optionc,:class => 'img-thumbnail') %>
-								<%elsif @question.t == "d"%>
-									<%= image_tag(@question.optiond,:class => 'img-thumbnail') %>
-								<% end %>
-						<% else %>
-							<%= qa %>
-						<% end %>
+					
+					<td class="text-center">
+						<h3 style="color:green"><b><%= @question.t %></b></h3>
 					</td>
 				</tr>
 
@@ -176,6 +151,10 @@
 	</div>
 
 	<div class="row text-center">
+
+	<%= will_paginate @ecetresults, :class => "flickr_pagination", :previous_label => "Previous", :next_label => 'Next', :page_links => true, renderer: BootstrapPagination::Rails %>
+			
+
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- school9edu_main_Blog1_1x1_as -->
 		<ins class="adsbygoogle"
