--- a/app/views/subscribe/index.html.erb
+++ b/app/views/subscribe/index.html.erb
@@ -1,19 +1,11 @@
 
- <div class="container" style="padding-left:80px;padding-right:80px;">
+ <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
- <div class="panel" style="padding: 50px;">
+ <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
 
-
- 
-  <span class="text-center">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <ins class='adsbygoogle' data-ad-client='ca-pub-7665698555914778' data-ad-slot='5852755247' style='display:inline-block;min-width:300px;max-width:1100px;width:100%;height:140px;'></ins>
-               
-                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-    </span> 
 
     <h1 class="text-center text-success">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</h1> 
-
+<br>
 
         
        <p><b class="text-success">AP SBTET Results 2017:</b> State Board of Technical Education and Training, Andhra Pradesh State (AP SBTET) The state boards of technical education & training of Andhra Pradesh conducts the diploma examinations twice in a year. These examinations are conducts in summer like March/April and winter exams are conducts in Oct/Nov respectively.’ The Director of Public Instruction (D.P.I.) used to head the Technical Education also at the time of formation of Andhra Pradesh. To help speed up the process of development of Technical Education, a Board in the name and style of "STATE BOARD OF TECHNICAL EDUCATION AND TRAINING", Government of Andhra Pradesh. The AP SBTET is responsible for conducting the Diploma/Polytechnic Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 Examinations and some minor examinations in the state of Andhra Pradesh. This year More than 1.5 Lakhs students appeared for the ‘sbtet‘ examination. Every year Semester Board conducts SBTET exams in a very professional way and tries to evaluate the papers in 45-50 Days from the completion date of exams. This year Andhra Pradesh SBTET Results 2017 expected in the month of May. However, the decision will be taken by AP SBTET board soon and will release a press note, which will be published on this website.
@@ -27,11 +19,11 @@
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-       <p>
-       <b class="text-success">Andhra Pradesh SBTET Diploma Results 2017:</b> (SBTET AP) Results 2017 nothing but the Diploma/Polytechnic Results will be release soon in the month of May 2017, and the results will be available for students At Any Time declared by the AP SBTET. As soon as the AP SBTET C16, C14, C09 & ER-91 Pharmacy Results 2017 will release soon by the SBTET examination board, we will update the information here, and we too will put our complete efforts in giving the direct link to the results page here directly or we will give you latest information here and we are Provided a E-mail Based Services all the Students Required details Below Form we will send Direct result link through email/Gmail  so that you can enter your AP sbtet 2017 PIN Number here and Fill other options details  click on the submit button for links send the result soon in Once It Is Released without having to go to the searching or official website.
+        <br>
+       <p><b class="text-success">Andhra Pradesh SBTET Diploma Results 2017:</b> (SBTET AP) Results 2017 nothing but the Diploma/Polytechnic Results will be release soon in the month of May 2017, and the results will be available for students At Any Time declared by the AP SBTET. As soon as the AP SBTET C16, C14, C09 & ER-91 Pharmacy Results 2017 will release soon by the SBTET examination board, we will update the information here, and we too will put our complete efforts in giving the direct link to the results page here directly or we will give you latest information here and we are Provided a E-mail Based Services all the Students Required details Below Form we will send Direct result link through email/Gmail  so that you can enter your AP sbtet 2017 PIN Number here and Fill other options details  click on the submit button for links send the result soon in Once It Is Released without having to go to the searching or official website.
        </p>
        <div class="col-sm-3"></div>
-       <%= image_tag("ap.jpeg", :class => "img-responsive", :align=> "middle") %>
+       <%= image_tag("AP-SBTET-RESULTS.png", :class => "img-responsive", :align=> "middle", :alt => "apsbtet, sbtet") %>
       
         <h2 class="text-success">AP SBTET C16, C14, C09 March/April Results 2017 @ SBTET WORLD, MANABADI, INDIARESULTS</h2>
  <p>
@@ -83,7 +75,8 @@ State Board of Technical Education, Andhra Pradesh successfully conducted Diplom
         </div></div>
         <div class="col-sm-3"></div>
         </div>
-
+      
+      <h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
 
        <h3>Details about AP SBTET Results 2017:</h3>
        <ul>
@@ -117,7 +110,7 @@ State Board of Technical Education, Andhra Pradesh successfully conducted Diplom
 SBTET AP Diploma Results College wise, Andhra Pradesh SBTET Result name wise results are also available here. There are providing a simple process of step by step procedure, you just filling up form with proving out your information such as name, Pin/Roll number, mobile number and email id. An AP SBTET Diploma Results from 2017 March / April month and then come soon announced Andhra Pradesh Technical Education board 2017 result from an official website and Below links.
 State Board of Technical Education and Training Andhra Pradesh (SBTET AP)  will soon declare Dipoma (Polytechnic) Exams results in 2017. AP SBTET Board Polytechnic Results 2017 will be available at sbtetworld.in, indiaresults.com, manabadi.co.in, and schools9.com. Candidates can check SBTET Result 2017 live by visiting our website at result announcement time. And at results news sites are also provides the best information for the SBTET DIPLOMA UPDATES AND REULTS is SBTET WORLD, And AP SBTET Results 2017 Provided (Officially) Released Sites are sbtetap.gov.in,  Sbtetworld.in, indiaresults.com, School9,Etc. Below Links checking of Result.</p>
 
-
+<br>
 <h4><a href="/ap-apsbtet-results">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
 Check Out Your Results Are Going To Be Released By AP SBTET <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
 
@@ -178,7 +171,17 @@ To Get All Updates & Results Directly On Your Mobile Phone. Don’t Forget To Sh
 <li>Ctrl+p click Keyboard and Take Print For Further References (Use)</li>
 </b>
 </ol>
-<br><br>
+<br>
+  <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-7665698555914778"
+                     data-ad-slot="8409268847"
+                     data-ad-format="link"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+<br>
 <h3 class="text-danger">About AP SBTET</h3>
 <p>The State Board of Technical Education and Training (SBTET) Andhra Pradesh was setup with an aim to frame policies for Technical Education in the state and to design new courses and establish them at various Polytechnics of Andhra Pradesh. Colleges offering Diploma Courses in Andhra Pradesh are affiliated to the SBTET and work in accordance with the SBTET.</p>
 
