--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL REGISTRATION" %>
 <div class="container">
 
 <div class="row text-center">
