--- a/app/views/ecet/ecetform.html.erb
+++ b/app/views/ecet/ecetform.html.erb
@@ -1,4 +1,4 @@
-	<!-- ============================================================== -->
+<% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>	<!-- ============================================================== -->
  <!-- Start right Content here -->
  <!-- ============================================================== -->
  <div class="content-page">
