--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -1,4 +1,5 @@
-
+<% content_for :title, "AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - neetgov.in" %>
+<meta property="og:image" content="assets/AP-SBTET-RESULTS-b899841c9860865de2c3a2aafc22389ae0b97928b91ed27948e78807accf2d20.png"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
@@ -6,7 +7,25 @@
 
     <h1 class="text-center text-success">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</h1> 
 <br>
+<div class="social-share">
+    <h4>Share on</h4>
+    
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-apsbtet-results" target='_blank'
+               class="twitter" title="Share on Twitter"><i class="fa fa-twitter"></i><span> Twitter</span></a>
+       
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-apsbtet-results/?url=http://www.neetgov.in/ap-apsbtet-results"
+               target='_blank'
+               class="facebook" title="Share on Facebook"><i class="fa fa-facebook"></i><span> Facebook</span></a>
+       
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-apsbtet-results" target='_blank'
+               class="google-plus" title="Share on Google Plus"><i
+                    class="fa fa-google-plus"></i><span> Google+</span></a>
 
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp"
+               title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i
+                    class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+</div><!-- /.social-share -->
+<br>
         
        <p><b class="text-success">AP SBTET Results 2017:</b> State Board of Technical Education and Training, Andhra Pradesh State (AP SBTET) The state boards of technical education & training of Andhra Pradesh conducts the diploma examinations twice in a year. These examinations are conducts in summer like March/April and winter exams are conducts in Oct/Nov respectively.’ The Director of Public Instruction (D.P.I.) used to head the Technical Education also at the time of formation of Andhra Pradesh. To help speed up the process of development of Technical Education, a Board in the name and style of "STATE BOARD OF TECHNICAL EDUCATION AND TRAINING", Government of Andhra Pradesh. The AP SBTET is responsible for conducting the Diploma/Polytechnic Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 Examinations and some minor examinations in the state of Andhra Pradesh. This year More than 1.5 Lakhs students appeared for the ‘sbtet‘ examination. Every year Semester Board conducts SBTET exams in a very professional way and tries to evaluate the papers in 45-50 Days from the completion date of exams. This year Andhra Pradesh SBTET Results 2017 expected in the month of May. However, the decision will be taken by AP SBTET board soon and will release a press note, which will be published on this website.
        </p>
@@ -55,7 +74,7 @@ State Board of Technical Education, Andhra Pradesh successfully conducted Diplom
             <%= f.hidden_field :state, :value => "ap" %>
              <%= f.input :name, :label => false, :placeholder => "Name", :required => true, :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :email, :label => false,  :required => true, :placeholder => "Example@email.com", :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :pin, :label => false,  :required => true, :placeholder => "Pin", :input_html => {:class  => "form-horizontal"} %>
+             <%= f.input :pin, :label => false,  :required => true, :placeholder => "10201-EE-054", :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :mobile, :label => false,  :required => true, :placeholder => "Mobile number", :input_html => {:class  => "form-horizontal", :pattern => "[789][0-9]{9}", :max => 10, :min => 10, :title =>"Provide valid phone number"} %>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- school9edu_main_Blog1_1x1_as -->
