--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -1,10 +1,30 @@
-
+<% content_for :title, "TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - www.neetgov.in" %>
+<meta property="og:image" content="assets/TS-SBTET-RESULTS-018fae034ebb9ffbe2919af6e37507b1908bdd649f6c06a8c15c002bdcdc4cbc.jpg"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
 
 
     <h1 class="text-center text-success">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</h1> 
+<br>
+<div class="social-share">
+    <h4>Share on</h4>
+    
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ts-tssbtet-results" target='_blank'
+               class="twitter" title="Share on Twitter"><i class="fa fa-twitter"></i><span> Twitter</span></a>
+       
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ts-tssbtet-results/?url=http://www.neetgov.in/ts-tssbtet-results"
+               target='_blank'
+               class="facebook" title="Share on Facebook"><i class="fa fa-facebook"></i><span> Facebook</span></a>
+       
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ts-tssbtet-results" target='_blank'
+               class="google-plus" title="Share on Google Plus"><i
+                    class="fa fa-google-plus"></i><span> Google+</span></a>
+
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ts-tssbtet-results" class="whatsapp"
+               title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i
+                    class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+</div><!-- /.social-share -->
 <br>
 
         
@@ -55,7 +75,7 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
             <%= f.hidden_field :state, :value => "ts" %>
              <%= f.input :name, :label => false, :placeholder => "Name", :required => true, :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :email, :label => false,  :required => true, :placeholder => "Example@email.com", :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :pin, :label => false,  :required => true, :placeholder => "Pin", :input_html => {:class  => "form-horizontal"} %>
+             <%= f.input :pin, :label => false,  :required => true, :placeholder => "10201-EE-054", :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :mobile, :label => false,  :required => true, :placeholder => "Mobile number", :input_html => {:class  => "form-horizontal", :pattern => "[789][0-9]{9}", :max => 10, :min => 10, :title =>"Provide valid phone number"} %>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- school9edu_main_Blog1_1x1_as -->
