--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,4 +1,4 @@
-
+<% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>
 <div class="container">
 <div class="row">
       <div class="col-sm-12">
