--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "NEET GOV ONLINE EXAMINATION PORTAL" %>
 <div class="container">
 <% if notice %>
         <div class="alert alert-success alert-dismissible" role="alert">
